--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@popperjs/core": "^2.9.2",
     "bootstrap": "^5.0.1",
     "core-js": "^3.6.5",
+    "html-loader": "^1.3.2",
     "vue": "^2.6.11"
   },
   "devDependencies": {
